--- a/basichmtl.html
+++ b/basichmtl.html
@@ -14,10 +14,52 @@
 <body>
     <header>
         <h1>my website</h1>
+        <!---->
+        <h2>heading</h2>
+        <h3>heading</h3>
+        <h4>heading</h4>
+        <h5>heading</h5>
+
+        
+
     </header>
-<main></main>
+<main>
+<section>
+    <h2>how a car works</h2>
+<p>lorem ipsum </p>
+</section>
+<article>
+    <h2> Cool cars </h2>
+        <p> lorem ipsum </p>
+        </article>
+<section>
+    <h3> Strong v bold </h3>
+        <p> this content is <strong></strong> </p>
+    </Section>
+</main>
 <footer></footer>
+<section>
+    <h3>parts of a car</h3>
+    <ul> 
+    <li> engine</li>
+    <li> trunk</li>
+    <li>wheels</li>
+    </ul>
+
+    <h3>favorite cars</h3>
+    <ol>
+        <li>mustang
+            <ul>
+                <li>blue</li>
+                <li>red</li>
+                <li>black</li>
+        </li>
+        <li>camero</li>
+        <li><a href="http://www.toyota.com" target="_blank">corolla</a></li>
+    </ol>
+</section>
 
 
 </body>
-</html>hmtl></html>
+
+</html>
