--- a/Drake.html
+++ b/Drake.html
@@ -25,12 +25,12 @@
 <li>Certified Lover Boy (2021)</li>
 <li>Honestly, Nevermind (2022)</li>
 <li>For All the Dogs (2023)</li>
-<li>If You’re Reading This It’s Too Late (2015) — commercial mixtape</li>
+<li>If You're Reading This It's Too Late (2015) — commercial mixtape</li>
 <li>More Life (2017) — playlist project</li>
 </ol>
-<h3> Media Craze Surrounding Drake’s Successes</h3>
+<h3> Media Craze Surrounding Drake's Successes</h3>
 <ul>
-<li>OVO Sound brand and October’s Very Own festival </li>
+<li>OVO Sound brand and October's Very Own festival </li>
 <li>Viral moments (e.g., “Hotline Bling” dance, memes) </li>
 <li>Billboard records for most charted songs and streaming milestones </li>
 <li>High-profile collaborations and creative “sing-rap” influence </li>
