--- a/Drake.html
+++ b/Drake.html
@@ -37,9 +37,9 @@
 </ul>
 <h3>Gallery</h3>
 <ol>
-<li>Image 1: (Drake performing live)</li>
-<li>Image 2: (Album cover collage) </li>
-<li>Image 3: (OVO logo)</li>
+<li> (Drake performing live)</li>
+<li> (Album cover collage) </li>
+<li> (OVO logo)</li>
 </ol>
     </main>
     <footer><p> Jill Stapleton is studying Communication Theory with a minor in Business Law at the University of Miami. She transferred from a Business degree at Northeastern University. Jill is originally from Buffalo, New York, and is a dedicated Drake fan who has attended a concert in Toronto. She is currently a student in the University’s Web Lab class.
