--- a/Drake.html
+++ b/Drake.html
@@ -37,7 +37,7 @@
 </ul>
 <h3>Gallery</h3>
 <ol>
-<li> (Drake performing live)</li>
+<li> https://upload.wikimedia.org/wikipedia/commons/2/28/Drake_July_2016.jpg?20240625022403(Drake performing live)</li>
 <li> (Album cover collage) </li>
 <li> (OVO logo)</li>
 </ol>
