--- a/Drake.html
+++ b/Drake.html
@@ -36,11 +36,11 @@
 <li>High-profile collaborations and creative “sing-rap” influence </li>
 </ul>
 <h3>Gallery</h3>
-<ol>
-<li> https://upload.wikimedia.org/wikipedia/commons/2/28/Drake_July_2016.jpg?20240625022403(Drake and Future Summer 16 Tour)</li>
-<li> https://commons.wikimedia.org/wiki/File:OVO_Sound.svg (Drakes independent Record Label) </li>
-<li> https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Drake_at_Bun-B_Concert_2011.jpg/640px-Drake_at_Bun-B_Concert_2011.jpg (Drake Wearing His OVO Brand)</li>
-</ol>
+<figure>
+  <img src=" https://commons.wikimedia.org/wiki/File:Rihanna_e_Drake_AWT.jpg  ">
+  <img src=" https://commons.wikimedia.org/wiki/File:Drake_at_Bun-B_Concert_2011_(1).jpg  ">
+  <img src="https://commons.wikimedia.org/wiki/File:Drake_sig.png ">
+</figure>
     </main>
     <footer><p> Jill Stapleton is studying Communication Theory with a minor in Business Law at the University of Miami. She transferred from a Business degree at Northeastern University. Jill is originally from Buffalo, New York, and is a dedicated Drake fan who has attended a concert in Toronto. She is currently a student in the University’s Web Lab class.
 </p></footer>
