--- a/Drake.html
+++ b/Drake.html
@@ -37,9 +37,9 @@
 </ul>
 <h3>Gallery</h3>
 <figure>
-  <img src=" https://commons.wikimedia.org/wiki/File:Rihanna_e_Drake_AWT.jpg  ">
-  <img src=" https://commons.wikimedia.org/wiki/File:Drake_at_Bun-B_Concert_2011_(1).jpg  ">
-  <img src="https://commons.wikimedia.org/wiki/File:Drake_sig.png ">
+  <img src="" alt="Rihanna and Drake performing together on stage, both smiling and engaging with the audience, with colorful concert lighting and an energetic atmosphere">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Drake_at_Bun-B_Concert_2011_%281%29.jpg" alt="Drake on stage at a Bun-B concert in 2011, holding a microphone and wearing a casual outfit, with a lively crowd and stage lights in the background">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Drake_sig.png" alt="Drake signature written in stylized cursive text on a plain background">
 </figure>
     </main>
     <footer><p> Jill Stapleton is studying Communication Theory with a minor in Business Law at the University of Miami. She transferred from a Business degree at Northeastern University. Jill is originally from Buffalo, New York, and is a dedicated Drake fan who has attended a concert in Toronto. She is currently a student in the University’s Web Lab class.
