--- a/Drake.html
+++ b/Drake.html
@@ -42,7 +42,7 @@
   <img src="images/Drake_at_Bun-B_Concert_2011_(1).jpg" alt="Drake on stage at a Bun-B concert in 2011, holding a microphone and wearing a casual outfit, with a lively crowd and stage lights in the background">
 </figure>
     </main>
-    <footer><p> Jill Stapleton is studying Communication Theory with a minor in Business Law at the University of Miami. She transferred from a Business degree at Northeastern University. Jill is originally from Buffalo, New York, and is a dedicated Drake fan who has attended a concert in Toronto. She is currently a student in the University’s Web Lab class.
+    <footer><p> Author Info:Jill Stapleton is studying Communication Theory with a minor in Business Law at the University of Miami. She transferred from a Business degree at Northeastern University. Jill is originally from Buffalo, New York, and is a dedicated Drake fan who has attended a concert in Toronto. She is currently a student in the University’s Web Lab class.
 </p></footer>
 </body>
     
