--- a/Drake.html
+++ b/Drake.html
@@ -37,8 +37,8 @@
 </ul>
 <h3>Gallery</h3>
 <figure>
-  <img src="images/Rihanna_e_Drake_AWT-5.jpg" alt="Rihanna and Drake performing together on stage, both smiling and engaging with the audience, with colorful concert lighting and an energetic atmosphere">
-  <img src="images/Drake_sig.svg" alt="Drake signature written in stylized cursive text on a plain background">
+  <img src="images/Rihanna_e_Drake_AWT-5.jpg" alt="Rihanna and Drake performing together on stage, both smiling and engaging with the audience, with colorful concert lighting and an energetic atmosphere" height="300">
+  <img src="images/Drake_sig.svg" alt="Stylized cursive signature reading Drake in bold black ink on a plain white background, conveying a confident and artistic tone">
   <img src="images/Drake_at_Bun-B_Concert_2011_(1).jpg" alt="Drake on stage at a Bun-B concert in 2011, holding a microphone and wearing a casual outfit, with a lively crowd and stage lights in the background">
 </figure>
     </main>
