--- a/Drake.html
+++ b/Drake.html
@@ -38,8 +38,8 @@
 <h3>Gallery</h3>
 <figure>
   <img src="images/Rihanna_e_Drake_AWT-5.jpg" alt="Rihanna and Drake performing together on stage, both smiling and engaging with the audience, with colorful concert lighting and an energetic atmosphere" height="300">
-  <img src="images/Drake_sig.svg" alt="Stylized cursive signature reading Drake in bold black ink on a plain white background, conveying a confident and artistic tone">
-  <img src="images/Drake_at_Bun-B_Concert_2011_(1).jpg" alt="Drake on stage at a Bun-B concert in 2011, holding a microphone and wearing a casual outfit, with a lively crowd and stage lights in the background">
+  <img src="images/Drake_sig.svg" alt="Stylized cursive signature reading Drake in bold black ink on a plain white background, conveying a confident and artistic tone" height="300">
+  <img src="images/Drake_at_Bun-B_Concert_2011_(1).jpg" alt="Drake on stage at a Bun-B concert in 2011, holding a microphone and wearing a casual outfit, with a lively crowd and stage lights in the background" height="300">
 </figure>
     </main>
     <footer><p> Author Info:Jill Stapleton is studying Communication Theory with a minor in Business Law at the University of Miami. She transferred from a Business degree at Northeastern University. Jill is originally from Buffalo, New York, and is a dedicated Drake fan who has attended a concert in Toronto. She is currently a student in the University’s Web Lab class.
