--- a/Drake.html
+++ b/Drake.html
@@ -42,13 +42,13 @@
   <img src="images/Drake_sig.svg" alt="Stylized cursive signature reading Drake in bold black ink on a plain white background, conveying a confident and artistic tone" height="300">
   <img src="images/Drake_at_Bun-B_Concert_2011_(1).jpg" alt="Drake on stage at a Bun-B concert in 2011, holding a microphone and wearing a casual outfit, with a lively crowd and stage lights in the background" height="300">
 </figure>
-<p>Learn more about Drake On His Official Website:
+<p>Learn more about Drake On His
   <a href="https://www.drakeofficial.com/">official website</a>
   or Learn more about Drakes Record Label OVO Sound:
   <a href="https://www.ovosound.com/">OVO Sound website</a>
 </p>
     </main>
-    <footer><p> Author Info:Jill Stapleton is studying Communication Studies with a minor in Business Law at the University of Miami. She transferred from a Business degree at Northeastern University. Jill is originally from Buffalo, New York, and is a dedicated Drake fan who has attended a concert in Toronto. She is currently a student in the University’s Web Lab class.
+    <footer><p> Author Info: Jill Stapleton is studying Communication Studies with a minor in Business Law at the University of Miami. She transferred from a Business degree at Northeastern University. Jill is originally from Buffalo, New York, and is a dedicated Drake fan who has attended a concert in Toronto. She is currently a student in the University’s Web Lab class.
 </p></footer>
 </body>
     
