--- a/cssexamples/index.html
+++ b/cssexamples/index.html
@@ -52,7 +52,7 @@
 <h3>Gallery</h3>
 <!--This is the gallery section showing images of Drake-->
 <figure>
-  <img src="images/Rihanna_e_Drake_AWT-5.jpg" alt="Rihanna and Drake performing together on stage, both smiling and engaging with the audience, with colorful concert lighting and an energetic atmosphere" height="300">
+  <img class="imageGallery" src="images/Rihanna_e_Drake_AWT-5.jpg" alt="Rihanna and Drake performing together on stage, both smiling and engaging with the audience, with colorful concert lighting and an energetic atmosphere" height="300">
   <img src="images/Drake_sig.svg" alt="Stylized cursive signature reading Drake in bold black ink on a plain white background, conveying a confident and artistic tone" height="300">
   <img src="images/Drake_at_Bun-B_Concert_2011_(1).jpg" alt="Drake on stage at a Bun-B concert in 2011, holding a microphone and wearing a casual outfit, with a lively crowd and stage lights in the background" height="300">
 </figure>
