--- a/cssexamples/index.html
+++ b/cssexamples/index.html
@@ -23,13 +23,13 @@
         <meta name="keywords" content="html, Drake, OVO, Toronto, Degrassi, Hip-Hop, R&B, Scorpion, Views"></head>
         <body>
     <h1>The Life And Career Of Drake</h1>
-    <p>Drake (Aubrey Drake Graham) is a Canadian rapper, singer, and songwriter born in 1986 in Toronto. Rising first as an actor on Degrassi: The Next Generation, he transitioned to music, blending hip-hop and R&B with melodic hooks and diaristic lyrics. Drake is considered one of the <strong>most influential</strong> artists in modern music. His lyrics are often <em>emotional and introspective</em>, resonating with fans worldwide.</p>
+    <p class="green">Drake (Aubrey Drake Graham) is a Canadian rapper, singer, and songwriter born in 1986 in Toronto. Rising first as an actor on Degrassi: The Next Generation, he transitioned to music, blending hip-hop and R&B with melodic hooks and diaristic lyrics. Drake is considered one of the <strong>most influential</strong> artists in modern music. His lyrics are often <em>emotional and introspective</em>, resonating with fans worldwide.</p>
        <main>
         <h2>Early Life And Career</h2>
         <p>Drake began performing in his teens, gaining visibility on Degrassi before releasing independent mixtapes. His 2009 mixtape So Far Gone broke through with hits like “Best I Ever Had,” leading to a deal with Young Money. In 2010 he released his debut studio album Thank Me Later, launching a run of chart-topping projects and collaborations.</p>
       <h2>Drake's Hit Career</h2>
       <p> Since Thank Me Later (2010), Drake has become one of the most commercially successful artists of the 21st century. He’s known for genre-blending albums, prolific features, and record-setting streams and Billboard entries. Drake has headlined multiple tours worldwide, founded OVO Sound, and helped shape the sound of contemporary hip-hop and R&B. His album <cite>Take Care</cite> (2011) won the Grammy for Best Rap Album and solidified his status as a leading figure in music.</p>
-    <h3>Drake's Discography</h3>
+    <h3 class="green grey Background">Drake's Discography</h3>
     <ol>
 <li>Thank Me Later (2010)</li>
 <li>Take Care (2011)</li>
