--- a/Drake.html
+++ b/Drake.html
@@ -15,13 +15,16 @@
               <nav>
               <ul>
                 <li>
+                  <a href="#Life&Career">Life & Career</a>
+                </li>
+                <li>
                   <a href="#discography">Discography</a>
                 </li>
                 <li>
                   <a href="#gallery">Gallery</a>
                 </li>
                 <li>
-                  <a href="# Media Craze Surrounding Drake's Successes"> Media Craze Surrounding Drake's Successes</a>
+                  <a href="#Media"> Media Craze Surrounding Drake's Successes</a>
                 </li>
               </ul>
             </nav>
@@ -34,7 +37,7 @@
           
           
        <main>
-        <section>
+        <section id="Life&Career">
         <h2>Early Life And Career</h2>
         <p>Drake began performing in his teens, gaining visibility on Degrassi before releasing independent mixtapes. His 2009 mixtape So Far Gone broke through with hits like “Best I Ever Had,” leading to a deal with Young Money. In 2010 he released his debut studio album Thank Me Later, launching a run of chart-topping projects and collaborations.</p>
       <h2>Drake's Hit Career</h2>
@@ -55,6 +58,7 @@
 <li>More Life (2017) — playlist project</li>
 </ol>
 </section>
+<section id="Media">
 <h3> Media Craze Surrounding Drake's Successes</h3>
 <ul>
 <li>OVO Sound brand and October's Very Own festival </li>
@@ -62,6 +66,8 @@
 <li>Billboard records for most charted songs and streaming milestones </li>
 <li>High-profile collaborations and creative “sing-rap” influence </li>
 </ul>
+</section>
+<section id="gallery">
 <h3>Gallery</h3>
 <!--This is the gallery section showing images of Drake-->
 <figure>
@@ -69,6 +75,7 @@
   <img src="images/Drake_sig.svg" alt="Stylized cursive signature reading Drake in bold black ink on a plain white background, conveying a confident and artistic tone" height="300">
   <img src="images/Drake_at_Bun-B_Concert_2011_(1).jpg" alt="Drake on stage at a Bun-B concert in 2011, holding a microphone and wearing a casual outfit, with a lively crowd and stage lights in the background" height="300">
 </figure>
+</section>
 <p>Learn more about Drake On His
   <a href="https://www.drakeofficial.com/">official website</a>
   or Learn more about Drakes Record Label OVO Sound:
